# qbrain

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-push.yml
docs/specs/: 2026-04-05-qbrain-design.md
scripts/: load-env.fish  load-env.sh
src/qbrain/: api.py  api_models.py  ask.py  cli.py  db.py  discover.py  embeddings.py  ingest.py  schema.py  schema.sql  search.py
